improved mobile responsive and fixed some design and layout bugs

--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@ ul {
   padding: 0px; /* padding was preapplied by bootstrap to ul elements*/
 }
 
-.montserrat__font__family{
-  font-family: 'Montserrat' !important;
+.montserrat__font__family {
+  font-family: "Montserrat" !important;
 }
 
 .font__size__12 {
@@ -272,12 +272,11 @@ nav {
 
 .temple__view__video__container {
   position: relative;
-  /* width: 40%; */
   height: 100%;
   border-radius: 8px;
 }
 
-.temple__view__video{
+.temple__view__video {
   width: 500px;
   height: 312px;
   filter: brightness(50%);
@@ -291,7 +290,6 @@ nav {
 }
 
 .temple__view__content {
-  /* width: 60%; */
   display: flex;
   flex-flow: column;
   gap: 24px;
@@ -366,7 +364,8 @@ nav {
   width: 576px;
 }
 
-.center__info h2, .center__info p {
+.center__info h2,
+.center__info p {
   max-width: 576px;
   width: 100%;
   padding: 0 16px;
@@ -425,13 +424,9 @@ nav {
 }
 /* upcoming events section ends */
 
-
 /* latest news section starts */
-
-    /* latest news section is styled using bootstrap check in index.html */
-    
+/* latest news section is styled using bootstrap check in index.html */
 /* latest news section ends */
-
 
 /* decoration above footer starts */
 .above__footer__decoration {
@@ -486,7 +481,7 @@ footer {
 .details__container div h1 {
   font-size: 24px;
   font-weight: 700;
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   line-height: 29.26px;
   padding-bottom: 8px;
 }
@@ -515,12 +510,11 @@ footer {
   line-height: 24px;
 }
 
-
-.phone__numbers__container{
+.phone__numbers__container {
   display: flex;
   flex-flow: row;
 }
-.phone__numbers__container div{
+.phone__numbers__container div {
   display: flex;
   flex-flow: column;
   justify-content: center;
@@ -597,7 +591,7 @@ footer {
     gap: 24px;
   }
 
-  .hero__section__content__container{
+  .hero__section__content__container {
     width: 90%;
     padding: 4px 0px 24px 0px;
   }
@@ -611,7 +605,7 @@ footer {
     width: 100%;
   }
 
-  .hero__section__links__list{
+  .hero__section__links__list {
     justify-content: start;
     padding: 0px;
   }
@@ -621,7 +615,10 @@ footer {
     width: 90%;
   }
 
-  .temple__view__container, .temple__view__video__container, .upcoming__events__container, .information__center__container {
+  .temple__view__container,
+  .temple__view__video__container,
+  .upcoming__events__container,
+  .information__center__container {
     width: 90% !important;
   }
 
@@ -643,7 +640,8 @@ footer {
   .latest__news__content {
     flex-flow: column;
   }
-  .temple__view__container, .temple__view__content {
+  .temple__view__container,
+  .temple__view__content {
     width: 90%;
     flex-flow: column;
     justify-content: center;
@@ -656,7 +654,7 @@ footer {
     width: 100%;
   }
 
-  .temple__view__video{
+  .temple__view__video {
     width: 100%;
     height: 312px;
     filter: brightness(50%);
